# study-sync

./: .gitignore  Cargo.toml  README.md
src/: database.rs  event.rs  game.rs  intake.rs  lib.rs  main.rs  notify.rs  orchestrator.rs  plays.schema  saves.rs  screenshots.rs  server.rs  watch.rs  watcher.rs
src/internal/: channel.rs  fs.rs  mod.rs  notifier.rs  online.rs  requester.rs  uploader.rs
src/watch/: fs.rs
src/watcher/: fs.rs
systemd/: study-sync.service
