[package]
name = "study-sync"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.dev]
strip = "debuginfo"
lto = "off"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.study-sync]
opt-level = 0

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.4.0"
notify = { version = "6.1.1", default-features = false, features = ["serde"] }
regex = { version = "1.10.5", default-features = false, features = ["perf", "std"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.204"
sha1 = "0.10.6"
tokio-rusqlite = "0.5.1"
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
walkdir = "2.5.0"
