[package]
name = "study-sync"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.dev]
strip = "debuginfo"
lto = "off"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.study-sync]
opt-level = 0

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
notify = { version = "8.0.0", default-features = false, features = ["serde"] }
regex = { version = "1.11.1", default-features = false, features = ["perf", "std"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "stream"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = "1.0.219"
sha1 = "0.10.6"
tokio-rusqlite = "0.6.0"
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
walkdir = "2.5.0"
